# fswait

./: .gitignore  .travis.yml  LICENSE  README.md  config.nix  default.nix  fswait.cabal  nixpkgs.nix  release.nix  shell.nix
.github/workflows/: ci.yml
src/: Main.hs
