name:                fswait
version:             0.1.0.0
synopsis:            Wait and observe events on the filesystem for a path, with a timeout
homepage:            https://github.com/ixmatus/fswait
license:             BSD3
license-file:        LICENSE
author:              Parnell Springmeyer
maintainer:          parnell@digitalmentat.com
copyright:           2017 Parnell Springmeyer
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fswait
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base             >= 4.9   && <4.10
              , optparse-generic >= 1.1.5
              , optparse-applicative
              , system-filepath
              , neat-interpolation
              , turtle
              , time-units
              , stm
              , hinotify
              , text

  hs-source-dirs:      src
  default-language:    Haskell2010
