name:                fswait
version:             1.0.0
synopsis:            Wait and observe events on the filesystem for a path, with a timeout
homepage:            https://github.com/ixmatus/fswait
license:             BSD3
license-file:        LICENSE
author:              Parnell Springmeyer
maintainer:          parnell@digitalmentat.com
copyright:           2017 Parnell Springmeyer
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fswait
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base                 >= 4.9     && < 4.10
              , optparse-generic     >= 1.1.5   && < 1.2
              , optparse-applicative >= 0.12    && < 0.14
              , system-filepath      >= 0.3.1   && < 0.5
              , turtle               >= 1.2.8   && < 1.3
              , time-units           >= 1.0.0   && < 2.0
              , stm                  >= 2.4.4.1 && < 2.5
              , hinotify             >= 0.3     && < 0.4
              , text                 >= 0.11    && < 1.3

  hs-source-dirs:      src
  default-language:    Haskell2010
