name:                fswait
version:             1.1.0
synopsis:            Wait and observe events on the filesystem for a path, with a timeout
homepage:            https://github.com/ixmatus/fswait
Bug-Reports:         https://github.com/ixmatus/fswait/issues
license:             BSD3
license-file:        LICENSE
author:              Parnell Springmeyer
maintainer:          parnell@digitalmentat.com
copyright:           2017 Parnell Springmeyer
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
Tested-With:         GHC == 7.10.2, GHC == 8.0.1, GHC == 8.10.7
Category:            Tools
Description:
    @fswait@ is a utility for blocking on the observation of a
    filesystem event for a path with a timeout.
    .
    The primary use-case for this is in system startup scripts that
    depend on the existence of some file or directory that will be
    created by another system service or job.

Source-Repository head
    Type:     git
    Location: https://github.com/ixmatus/fswait


executable fswait
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base                 >= 4.8     && < 5
              , optparse-generic     >= 1.4     && < 1.5
              , optparse-applicative
              , turtle               >= 1.6.1   && < 1.7
              , time-units           >= 1.0.0   && < 2.0
              , stm                  >= 2.4.4.1 && < 2.6
              , hinotify             >= 0.3     && < 0.5
              , text                 >= 0.11    && < 3

  hs-source-dirs:      src
  default-language:    Haskell2010
